--- a/dashboard.html
+++ b/dashboard.html
@@ -46,32 +46,32 @@
 <section class="container col-lg-7 mt-3" style="width: 100%;">
 <div id="emp" class=" d-flex bg-dark text-center align-items-center justify-content-center p-4"style="width: 100%;"> 
     <div class="text-center">
-        <img class="p-3" src="/img/logo.png" style="width: 120px;">
+        <img class="p-3" src="./img/logo.png" style="width: 120px;">
         <h6 class="text-light">Total Drivers</h6>
         <p class="text-light"> 1000 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="/img/logo.png" style="width: 120px;">
+        <img class="p-3" src="./img/logo.png" style="width: 120px;">
         <h6 class="text-light">WRISOD</h6>
         <p class="text-light"> 20 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="/img/logo.png" style="width: 120px;">
+        <img class="p-3" src="./img/logo.png" style="width: 120px;">
         <h6 class="text-light">SAISOD</h6>
         <p class="text-light"> 322 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="/img/logo.png" style="width: 120px;">
+        <img class="p-3" src="./img/logo.png" style="width: 120px;">
         <h6 class="text-light">NAISOD</h6>
         <p class="text-light"> 140 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="/img/logo.png" style="width: 120px;">
+        <img class="p-3" src="./img/logo.png" style="width: 120px;">
         <h6 class="text-light">DHISOD</h6>
         <p class="text-light"> 524 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="/img/logo.png" style="width: 120px;">
+        <img class="p-3" src="./img/logo.png" style="width: 120px;">
         <h6 class="text-light">ISSD</h6>
         <p class="text-light"> 5 </p>
     </div>
