--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
 
-    <section >
+    <section class="col-xs-12 col-md-12">
         <div id="navbar" class="navbar navbar-expand-md navbar-dark text-white fixed-top" style="height: 55px;">
             <div class="container">
 
