--- a/index.html
+++ b/index.html
@@ -18,32 +18,23 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
 
- <section >
-    <div id="navbar" class="navbar navbar-expand-md navbar-dark text-white fixed-top" style="height: 55px;">
-        <div class="container">
-        
-         <nav class="navbar">
-            <div class="container-fluid align-items-center">
-              <a class="navbar-brand" href="#">
-                <img src="/img/logo.png" alt="Logo" height="35" class="d-inline-block align-text-center mx-2">
-                Be Safe
-              </a>
-           </div>
-          </nav>
+  <section class="col-xs-12 col-md-12">
+    <div id="navbar" class="navbar navbar-expand-md navbar-dark text-white fixed-top px-5" style="height: 55px;">
+        <a class="navbar-brand" href="#">
+          <img src="./img/logo.png" alt="Logo" height="35" class="d-inline-block align-text-center mx-2">
+          Be Safe
+        </a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class=""><a href="#home" class="nav-link">Home</a></li>
+                <li class=""><a href="#applicationFeatures" class="nav-link">Features</a></li>
+                <li class=""><a href="#topDrivers" class="nav-link">Top Drivers</a></li>
+                <li class=""><a href="#faq" class="nav-link">FAQ</a></li>
+                <li class="logged-out"><a class="btn btn-warning mx-2" href="login.html" >Login</a></li>
+                <li class="logged-in"> <a class="btn btn-warning mx-2" href="">Profile</a></li>
+                <li class="logged-in"> <a class="btn btn-warning mx-2" href="">Logout</a></li>
 
-            <div id="mainmenu" class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#applicationFeatures" class="nav-link">Features</a></li>
-                    <li class="nav-item"><a href="#topDrivers" class="nav-link">Top Drivers</a></li>
-                    <!-- <li class="nav-item"><a href="#monthlyStatisticsReport" class="nav-link">Monthly Report</a></li> -->
-                    <!-- <li class="nav-item"><a href="#monthlyQuizesCompetition" class="nav-link">Monthly Quizes</a></li> -->
-                    <!-- <li class="nav-item"><a href="#contactUs" class="nav-link">Contact Us</a></li> -->
-                    <li class="nav-item"><a href="#faq" class="nav-link">FAQ</a></li>
-                    <a class="btn btn-warning mx-3" href="login.html" >Login</a>
-                </ul>
-            </div>
-            
+            </ul>
         </div>
     </div>
  </section>
@@ -175,7 +166,7 @@
                   <div class="col-lg-12">
                     <div class="card-body">
                       <h5 class="card-title">WR IND SEC OPS DEPT</h5>
-                      <h5 class="card-text">+600 Employees</h5>
+                      <h5 class="card-text">Rank 1</h5>
                     </div>
                 </div>
               </div>
@@ -184,7 +175,7 @@
                   <div class="col-lg-12">
                     <div class="card-body">
                       <h5 class="card-title">SA IND SEC OPS DEPT</h5>
-                      <h5 class="card-text">+540 Employees</h5>
+                      <h5 class="card-text">Rank 2</h5>
                     </div>
                 </div>
               </div>
@@ -193,7 +184,7 @@
                 <div class="col-lg-12">
                   <div class="card-body">
                     <h5 class="card-title">DH IND SEC OPS DEPT</h5>
-                    <h5 class="card-text">+330 Employees</h5>
+                    <h5 class="card-text">Rank 3</h5>
                   </div>
               </div>
             </div>
@@ -377,6 +368,7 @@
         </div>
   </div>      
 </section>
+
 
 <!-- Footer -->
 <footer id="footer" class="pt-2 text-white text-center mt-auto" style="height: 50px;">
