--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
     </div>
 </footer>
     
-    <script src="./js/app.js" type="module"> </script>
+    <script src="./js/index.js" type="module"> </script>
     <script src="./js/bootstrap.bundle.min.js"></script>
     
 </body>
