--- a/admin/index.html
+++ b/admin/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <style> body::before{ content: ''; display: block; height: 60px } </style>
 
@@ -24,15 +24,29 @@
             <nav class="navbar">
             <div class="container-fluid align-items-center">
                 <a class="navbar-brand" href="#">
-                <img src="./img/logo.png" alt="Logo" height="35" class="d-inline-block align-text-center mx-2">
+                <img src="../img/logo.png" alt="Logo" height="35" class="d-inline-block align-text-center mx-2">
                 Be Safe
                 </a>
-            </div>
+             </div>
             </nav>
 
             <div id="mainmenu" class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
-                    <a onclick="logout(event)" class="btn btn-warning mx-3">Logout</a>
+                    <li>
+                        <a class="btn text-light">Home</a>
+                    </li>
+                    <li>
+                        <a href="../admin/dashboard.html" class="btn text-light">Dashboard</a>
+                    </li>
+                    <li>
+                        <a class="btn text-light">Profile</a>
+                    </li>
+                    <li>
+                        <a class="btn text-light">Settings</a>
+                    </li>
+                    <li>
+                        <a onclick="logout(event)" class="btn btn-warning mx-3">Logout</a>
+                    </li>
                 </ul>
             </div>
             
@@ -47,51 +61,51 @@
 
 <section>
     <table class="container table table-striped-columns text-center">
-        <thead>
+        <thead id="table">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Email</th>
             <th scope="col">Department</th>
             <th scope="col">Division</th>
-            <th scope="col">role</th>
+            <th scope="col">Role</th>
           </tr>
         </thead>
         <tbody class="ta">
-        
         </tbody>
       </table>
+      <h1 id="message"></h1>
 </section>
 
 <section class="container col-lg-7 mt-3" style="width: 100%;">
 <div id="emp" class=" d-flex bg-dark text-center align-items-center justify-content-center p-4"style="width: 100%;"> 
     <div class="text-center">
-        <img class="p-3" src="./img/logo.png" style="width: 120px;">
+        <img class="p-3" src="../img/logo.png" style="width: 120px;">
         <h6 class="text-light">Total Drivers</h6>
         <p class="text-light"> 1000 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="./img/logo.png" style="width: 120px;">
+        <img class="p-3" src="../img/logo.png" style="width: 120px;">
         <h6 class="text-light">WRISOD</h6>
         <p class="text-light"> 20 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="./img/logo.png" style="width: 120px;">
+        <img class="p-3" src="../img/logo.png" style="width: 120px;">
         <h6 class="text-light">SAISOD</h6>
         <p class="text-light"> 322 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="./img/logo.png" style="width: 120px;">
+        <img class="p-3" src="../img/logo.png" style="width: 120px;">
         <h6 class="text-light">NAISOD</h6>
         <p class="text-light"> 140 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="./img/logo.png" style="width: 120px;">
+        <img class="p-3" src="../img/logo.png" style="width: 120px;">
         <h6 class="text-light">DHISOD</h6>
         <p class="text-light"> 524 </p>
     </div>
     <div class="text-center">
-        <img class="p-3" src="./img/logo.png" style="width: 120px;">
+        <img class="p-3" src="../img/logo.png" style="width: 120px;">
         <h6 class="text-light">ISSD</h6>
         <p class="text-light"> 5 </p>
     </div>
@@ -150,11 +164,8 @@
        </p>
     </div>
 </footer>
-<script src="./js/app.js" type="module"> </script>
-<script src="./js/bootstrap.bundle.min.js"></script>
-        <!-- ====== ionicons ======= -->
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+<script src="../js/index.js" type="module"> </script>
+<script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
