--- a/admin/index.html
+++ b/admin/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar">
             <div class="container-fluid align-items-center">
                 <a class="navbar-brand" href="#">
-                <img src="../img/logo.png" alt="Logo" height="35" class="d-inline-block align-text-center mx-2">
+                <img href="../index.html" src="../img/logo.png" alt="Logo" height="35" class="d-inline-block align-text-center mx-2">
                 Be Safe
                 </a>
              </div>
@@ -33,7 +33,7 @@
             <div id="mainmenu" class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li>
-                        <a class="btn text-light">Home</a>
+                        <a href="../admin/index.html"  class="btn text-light">Home</a>
                     </li>
                     <li>
                         <a href="../admin/dashboard.html" class="btn text-light">Dashboard</a>
