--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -54,8 +54,8 @@
 </section>
 
 
-<section class="d-flex container col-lg-12 mt-3" style="width: 100%;">
-    <div id="emp" class="row d-flex col-md-12 bg-dark text-center align-items-center justify-content-center p-4"style="width: 100%;"> 
+<section class="d-flex container  mt-3" style="width: 100%;">
+    <div id="emp" class="row d-flex col-md-12 bg-dark text-center align-items-center justify-content-center p-4"style="width:;"> 
         <div class="text-light">
             <h2>ISO Weekly Driving Report</h2>
             <h4 class="text-warning">Week # 8 | 26 February 2023 </h4>
@@ -64,32 +64,32 @@
         <hr style="color: aliceblue;">
         <h3 class="text-light text-center">Departments</h3>
         <br>
-        <div class="text-center col-md-2 col-lg-2">
+        <div class="text-center col-md-4 col-lg-2">
             <img class="p-3" src="../img/logo.png" style="width: 120px;">
             <h6 class="text-light">Total Drivers</h6>
             <p class="text-light"> 1000 </p>
         </div>
-        <div class="text-center col-md-2 col-lg-2">
+        <div class="text-center col-md-4 col-lg-2">
             <img class="p-3" src="../img/logo.png" style="width: 120px;">
             <h6 class="text-light">WRISOD</h6>
             <p class="text-light"> 20 </p>
         </div>
-        <div class="text-center col-md-2 col-lg-2">
+        <div class="text-center col-md-4 col-lg-2">
             <img class="p-3" src="../img/logo.png" style="width: 120px;">
             <h6 class="text-light">SAISOD</h6>
             <p class="text-light"> 322 </p>
         </div>
-        <div class="text-center col-md-2 col-lg-2">
+        <div class="text-center col-md-4 col-lg-2">
             <img class="p-3" src="../img/logo.png" style="width: 120px;">
             <h6 class="text-light">NAISOD</h6>
             <p class="text-light"> 140 </p>
         </div>
-        <div class="text-center col-md-2 col-lg-2">
+        <div class="text-center col-md-4 col-lg-2">
             <img class="p-3" src="../img/logo.png" style="width: 120px;">
             <h6 class="text-light">DHISOD</h6>
             <p class="text-light"> 524 </p>
         </div>
-        <div class="text-center col-md-2 col-lg-2">
+        <div class="text-center col-md-4 col-lg-2">
             <img class="p-3" src="../img/logo.png" style="width: 120px;">
             <h6 class="text-light">ISSD</h6>
             <p class="text-light"> 5 </p>
@@ -99,41 +99,41 @@
     <h3 class="text-light text-center">Participation Rate</h3>
     <br><br><br><br>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 23% </p>
         </div>
         <h6 class="text-light">ISO</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 53% </p>
         </div>
         <h6 class="text-light">WRISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 30% </p>
         </div>
         <h6 class="text-light">SAISOD</h6>
     </div>
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 22% </p>
         </div>
         <h6 class="text-light">NAISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 41% </p>
         </div>
         <h6 class="text-light">DHISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 55% </p>
         </div>
@@ -145,41 +145,41 @@
     <h3 class="text-light text-center">Driving Hours</h3>
     <br><br><br><br>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 2311 </p>
         </div>
         <h6 class="text-light">ISO</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 542 </p>
         </div>
         <h6 class="text-light">WRISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 322 </p>
         </div>
         <h6 class="text-light">SAISOD</h6>
     </div>
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 173 </p>
         </div>
         <h6 class="text-light">NAISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 293 </p>
         </div>
         <h6 class="text-light">DHISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 293 </p>
         </div>
@@ -190,41 +190,41 @@
     <h3 class="text-light text-center">Speed Violations</h3>
     <br><br><br><br>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 112 </p>
         </div>
         <h6 class="text-light">ISO</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 27 </p>
         </div>
         <h6 class="text-light">WRISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 43 </p>
         </div>
         <h6 class="text-light">SAISOD</h6>
     </div>
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 33 </p>
         </div>
         <h6 class="text-light">NAISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 21 </p>
         </div>
         <h6 class="text-light">DHISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 5 </p>
         </div>
@@ -235,41 +235,41 @@
     <h3 class="text-light text-center">Hard Breaks</h3>
     <br><br><br><br>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 490 </p>
         </div>
         <h6 class="text-light">ISO</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 133 </p>
         </div>
         <h6 class="text-light">WRISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 145 </p>
         </div>
         <h6 class="text-light">SAISOD</h6>
     </div>
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 211 </p>
         </div>
         <h6 class="text-light">NAISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 234 </p>
         </div>
         <h6 class="text-light">DHISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 256 </p>
         </div>
@@ -281,41 +281,41 @@
     <h3 class="text-light text-center">Overall Driving Performance</h3>
     <br><br><br><br>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 55% </p>
         </div>
         <h6 class="text-light">ISO</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 34% </p>
         </div>
         <h6 class="text-light">WRISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 31% </p>
         </div>
         <h6 class="text-light">SAISOD</h6>
     </div>
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 22% </p>
         </div>
         <h6 class="text-light">NAISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 60% </p>
         </div>
         <h6 class="text-light">DHISOD</h6>
     </div>
 
-    <div class="text-center col-md-2 col-lg-2">
+    <div class="text-center col-md-4 col-lg-2">
         <div>
             <p class="text-light cirs"> 44% </p>
         </div>
