--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="./img/logo.png" alt="Logo" height="35" class="d-inline-block align-text-center mx-2">
           Be Safe
         </a>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse col-md-6">
             <ul class="navbar-nav ms-auto">
                 <li class=""><a href="#home" class="nav-link">Home</a></li>
                 <li class=""><a href="#applicationFeatures" class="nav-link">Features</a></li>
@@ -37,16 +37,16 @@
  </section>
 
 <!-- Hero -->
-<section id="home" style="height: 100%;" class=" text-light text-center text-sm-start">
+<section id="home" style="height: 100%;" class="col-md-12 text-light text-center text-sm-start">
     <div class="container">
-        <div class="d-flex align-items-center justify-content-center px-5 py-4 align-items-center">
-            <div class="col-md-6 col-lg-12">
-                <div class="col-md-6 col-lg-11">
-                    <h3 id="titl" class=" display-4">Be Safe <span class="text-warning">Driving Application</span></h3>
-                    <p id="tj" class="py-4 lead text-justify">It’s a part of proposed WRISOD Employee Driving Behavior Program to enhance safety culture. Be Safe is a mobile application that can track and collect location data, driving style, driving behaviors, driving patterns, lifestyle patterns, vehicle data and generate and analyze driving behaviors.</br>
+        <div class="col-md-12 d-flex align-items-center justify-content-center px-5 py-4 align-items-center">
+            <div class="col-md-12 col-lg-12">
+                <div class="col-md-6 col-lg-12">
+                    <h3 id="titl" class="display-4 col-md-12 ">Be Safe <span class="text-warning">Driving Application</span></h3>
+                    <p id="tj" class="col-md-10 py-4 lead text-justify">It’s a part of proposed WRISOD Employee Driving Behavior Program to enhance safety culture. Be Safe is a mobile application that can track and collect location data, driving style, driving behaviors, driving patterns, lifestyle patterns, vehicle data and generate and analyze driving behaviors.</br>
                 </div>
             </div>
-            <img class="d-none d-lg-block img-fluid" style="width: 130px;" src="./img/logo.png">
+            <img class="row d-none d-md-block" style="width: 130px;" src="./img/logo.png">
         </div>
     </div>
 </section>
