--- a/login.html
+++ b/login.html
@@ -42,10 +42,10 @@
 
 <!--Login -->
 
-<section id="support" class="py-5 bg-light text-white text-center d-flex justify-content-center">    
-    <div class="bg-dark p-4 col-lg-6 row" style="border: 2px solid #ffc107;">
-    <img src="./img/logo.png" alt="Logo" style="width: 150px;" class="justify-content-around" >
-    <h3 class="text-warning text-center my-3 "> Login</h3>
+<section id="support" class="py-4 bg-light text-white text-center d-flex justify-content-center">    
+    <div class="bg-dark p-4 col-lg-5" style="border: 2px solid #ffc107;">
+    <img src="./img/logo.png" alt="Logo" style="width: 100px;"  >
+    <h3 class="text-warning text-center my-3 "> Log in to Be Safe</h3>
     <form  onsubmit="login(event)">
         <div class="col-lg-12">
             <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
@@ -56,7 +56,7 @@
         </div>
         <br><br>
         <div class="col-lg-12">
-            <button class="btn btn-warning" name="loginBtn">Login</button>
+            <button class="btn btn-warning" name="loginBtn">Log in</button>
         </div>
     </form>
     </div>
