--- a/admin/drivers.html
+++ b/admin/drivers.html
@@ -39,6 +39,9 @@
                         <a href="../admin/drivers.html" class="btn text-light">Drivers</a>
                     </li>
                     <li>
+                        <a href="../admin/messages.html" class="btn text-light">Messages</a>
+                    </li>
+                    <li>
                         <a href="../admin/myprofile.html" class="btn text-light">My Profile</a>
                     </li>
                     <li>
