--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
 
 <!--Login -->
 
-<section id="support" class="py-4 bg-light text-white text-center d-flex justify-content-center">    
+<section id="support" class="py-4 text-white text-center d-flex justify-content-center">    
     <div class="bg-dark p-4 col-lg-5" style="border: 2px solid #ffc107;">
     <img src="./img/logo.png" alt="Logo" style="width: 100px;"  >
     <h3 class="text-warning text-center my-3 "> Log in to Be Safe</h3>
@@ -56,7 +56,7 @@
         </div>
         <br><br>
         <div class="col-lg-12">
-            <button class="btn btn-warning" name="loginBtn">Log in</button>
+            <button id="loginBtn" class="btn btn-warning">Log in</button>
         </div>
     </form>
     </div>
