--- a/index.html
+++ b/index.html
@@ -288,32 +288,35 @@
  <div class="container">
   <h2 class="text-center text-warning">Contact Us</h2>
 
-  <form class="row g-4 py-3" method="POST" action="" enctype="multipart/form-data">
+  <form id="myForm" onsubmit="addMessage(event)" method="post" class="row g-4 py-3">
     <div class="col-md-6">
       <label for="Name" class="form-label">Name</label>
-      <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Your Full Name" required >
+      <input type="text" class="form-control" id="CName" placeholder="Enter Your Name" required >
     </div>
 
     <div class="col-md-6">
       <label for="Email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="Email" name="Email" placeholder="Enter Your Email" required>
+      <input type="email" class="form-control" id="CEmail" placeholder="Enter Your Email" required>
     </div>
 
  
     <div class="form-floating" id="remain">
-    <textarea class="form-control text-dark" name="Question" id="floatingTextarea2" style="height: 100px"></textarea>
+    <textarea class="form-control text-dark" name="Question" id="CMessage" style="height: 100px"></textarea>
     <label for="floatingTextarea2" placeholder="Enter Your Message" >Question</label>
     </div>
 
 
-
     <div class="col-12 text-center">
-      <button type="submit" class="btn btn-warning px-5" name="Send">Send</button>
+      <button class="btn btn-warning px-5" id="btnSend">Send</button>
     </div>
-
   </form>
+  <div id="ALERT" class="col-md-12 text-center alert alert-success" style="display: none;" role="alert">
+    Your Message Recevied Successfully ……
   </div>
   </div>
+ 
+  </div>
+  
 </section>
 
 <!-- FAQ -->
@@ -376,7 +379,8 @@
   </div>
 </footer>
   
-  <script src="./js/bootstrap.bundle.min.js"></script>
+<script src="../js/index.js" type="module"> </script>
+<script src="./js/bootstrap.bundle.min.js"></script>
   
 </body>
 </html>
